[package]
name = "twitter-get-token"
version = "0.1.0"
authors = ["kgtkr <kgtkr.jp@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.11.3"
rust-crypto = "0.2.36"
chrono = "0.4.19"
uuid = { version = "0.8", features = ["v4"] }
url = "2.2.1"
base64 = "0.13.0"
hyper = "0.14.7"
serde_urlencoded = "0.7.0"
serde = "1.0.125"
serde_derive = "1.0.125"
toml = "0.5.8"
rpassword = "5.0.1"
percent-encoding = "2.1.0"
tokio = { version = "1", features = ["full"] }
